# rogomatic

./: ProjectHome.md  readme.md
rogomatic/: AUTHORS  Makefile.am.local  Makelog  arms.c  command.c  configure.ac.local  deciphervt100.c  gene.c  getroguetoken.c  getroguetoken.h  install.h  io.c  learn.c  main.c  makefile  mess.c  replay.c  rooms.c  scorefile.c  search.c  strategy.c  things.c  titlepage.c  types.h  utility.c
rogomatic-pre-fw/: TODO  debug.c  gene.c  makefile  win.genepool
rogomatic/fw-pkgin/: config
rogomatic/src/: Makefile.am.local  command.c  config.c  datesub.l  debug.c  debuglog.c  deciphervt100.c  explore.c  gene.c  getroguetoken.c  globals.h  histplot.c  install.h  install.h.in  io.c  learn.c  main.c  mess.c  pack.c  rand.c  rooms.c  scorefile.c  search.c  setup.c  stats.c  strategy.c  survival.c  things.c  types.h  utility.c  worth.c  yee.fatal
rogue-3.6/: Makefile.am  Makefile.am.local  bootstrap  configure.ac.local
rogue-3.6/fw-pkgin/: config
rogue-3.6/src/: LICENSE.TXT  Makefile.am  command.c  daemon.c  daemons.c  fight.c  io.c  list.c  mdport.c  misc.c  move.c  options.c  pack.c  potions.c  rogue.r  rogue36.cat  rogue36.sln  rogue36.vcproj  save.c  vers.c  wizard.c
trunk/rogomatic-pre-fw/: debuglog.c  (+4 more)
trunk/rogue-3.6/: Makefile.am
trunk/rogue-3.6/fw-pkgin/: config
trunk/rogue-3.6/src/: Makefile.am.local  armor.c  chase.c  init.c  machdep.h  main.c  mdport.c  monsters.c  newlevel.c  passages.c  readme36.html  rings.c  rip.c  rogue.6  rogue.h  rogue36.html  rooms.c  scrolls.c  state.c  sticks.c  things.c  weapons.c  xcrypt.c
(+44 files in other folders)
